Actually fix column gap variables

--- a/assets/styles/grid/columns.scss
+++ b/assets/styles/grid/columns.scss
@@ -895,7 +895,7 @@ $column-gap: 0.75rem !default;
   @for $i from 0 through 8 {
 
     &.columns--#{$i} {
-      --columnGap: $i * 0.25rem;
+      --columnGap: #{$i * 0.25rem};
     }
 
   }
